# ChangeLog for dev-games/netradiant
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*netradiant-9999 (26 Jan 2011)

  26 Jan 2011; Nikoli <nikoli@lavabit.com> +netradiant-9999.ebuild,
  +metadata.xml:
  initial ebuild
