@@ -1,3 +1,7 @@
-EBUILD netradiant-9999.ebuild 3724 RMD160 3a051f7dcd4c07a458b0b16559d15f046c5ecc03 SHA1 9878091febab2eb4ce45a1ffbc740cc647a328e4 SHA256 08488ea25567db4e4d5aa22a6f09047698957f20330c1e6bb98540e98c9b66d3
-MISC ChangeLog 256 RMD160 4816ee90e8b478bc92f0a0676dde55b959539283 SHA1 5068340f257abb7a5b3a008751d5e27d9f9fa335 SHA256 b406357296090c1cdc8946a542077b6183a9a42516826b7dc0416c96e46ce0e3
-MISC metadata.xml 520 RMD160 30b3b0c4208b583b5a1c5e47b317010744dfd45f SHA1 a05fdfae2fc1e16b639f8e0bfc1a6fe0f7bdce5b SHA256 23355d27ba7dcabf57add2a102507f83ceaeadbffbd6192c3f0fb4b50a8620ca
+DIST OpenArenaPack.zip 46745 RMD160 de376231a3aa083bd11f866f6d3620fab60605a6 SHA1 2cdd99d4e13819907531e8eaf69882346d4f48f8 SHA256 76dffcef3602085c2c473804f63c5632f482e8f4bc551421b38ac44b92fc7cd7
+DIST Quake2Pack.zip 10878 RMD160 8b167c129e0d0542985358cb679ef778be53389f SHA1 222ef2151b731d69291b177ea1692c4e0207387c SHA256 b62b3a38f9fc80522af91a5d6f0a62598b97790b604ba6daab5e04efa381a605
+DIST QuakePack.zip 16447 RMD160 5312d17004440044b47b5c6b3edce2ed910c0ca8 SHA1 28ef966012854bcd3320a75bddf93b97c5589afd SHA256 234a7bb111b97878ae801ad8dc0613b59b8900bf0582072e9d784113153490d6
+DIST TremulousPack.zip 17153 RMD160 fe004da3eb1bf02e474e1ffdbe582913f0c9d3c6 SHA1 e6343ba67f8dbc7c5f42b4c65df865eb24767278 SHA256 2328a88a9353b42a3834ce6f6a4c1d6dc056c84582afcc520c6bd486ba8c1287
+EBUILD netradiant-9999.ebuild 6554 RMD160 6d545a0d3a9923610693aa63bb6db571d9ef7684 SHA1 0f1baa194ef8b48fdbc258fae90f12f4f20d0717 SHA256 d1dcbf302a261fa1bf3a00374796e4339b23ef33cf7ba5d014bd001d0bf71889
+MISC ChangeLog 423 RMD160 8372cee79f3b109b50d59d51ad81a713085a35be SHA1 29b61a29d43ebc7e4d069a9288ddb68ec4a23a12 SHA256 30823d2f95ddd77e0be4fa09704614a6bbe3e12da0cadba30888becf222256bd
+MISC metadata.xml 1135 RMD160 622c62e6d19dd56e67a0e3d81769bab188cd8995 SHA1 78959671e514034724f235cf0866a774eebc8493 SHA256 f7cf648da6ef09104d7e325168d02a096972b103b427a19dec74a282fef4efd0
