@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Jan 2011; Nikoli <nikoli@lavabit.com> netradiant-9999.ebuild,
+  metadata.xml:
+  add USE flags for radiant and every tool, gtk is optional now , add more
+  packs
+
 *netradiant-9999 (26 Jan 2011)
 
   26 Jan 2011; Nikoli <nikoli@lavabit.com> +netradiant-9999.ebuild,
